--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,3 +9,11 @@
   --green: #1dc37e;
   --green-light: #c8f8e4;
 }
+a{
+  text-decoration: none;
+
+  color: inherit;
+}
+*{
+  box-sizing: border-box;
+}
